--- a/src/components/movieRow.css
+++ b/src/components/movieRow.css
@@ -30,3 +30,39 @@
 .movieRow_item img:hover{
     transform: scale(1);
 }
+
+.movieRow_left,
+.movieRow_right{
+    position: absolute;
+    width: 40px;
+    height: 300px;
+    background-color: #141414;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+    opacity: 0;
+    transition: all ease 0.6s;
+}
+
+.movieRow_left{    
+    right: 0;
+    background: linear-gradient(to left, #111 30%, transparent 70%);
+}
+
+.movieRow_right{
+    left: 0;
+    background: linear-gradient(to right, #111 30%, transparent 70%);
+}
+
+.movieRow:hover .movieRow_left,
+.movieRow:hover .movieRow_right{
+    opacity: 1;
+}
+
+.movieRow_list{
+    transition: all ease 0.6s;
+}
