--- a/src/components/movieRow.css
+++ b/src/components/movieRow.css
@@ -63,6 +63,13 @@
     opacity: 1;
 }
 
+@media (max-width:760px){
+    .movieRow_left,
+    .movieRow_right{
+        opacity: 1;
+    }
+}
+
 .movieRow_list{
     transition: all ease 0.6s;
 }
